# global-workflow

./: .editorconfig  .git-credentials  .gitignore  .gitmodules  .pycodestyle  .readthedocs.yaml  .shellcheckrc  0readme.txt  Externals.cfg  Externals_coupled.cfg  Jenkins_arch_opt  Jenkinsfile  Jenkinsfile_main  Jenkinsfile_org  Jenkinsfile_stubbed  Jenkinsfile_temp  README.md  README_run_orion.md  allmods.tar  base.env  build.fv3.gsi.mods.0612.tar  build.fv3.post.mods.0612.tar  check  flat  global_control.nml.IN  install.sh  jkhNOTES  readme.txt  readme_efsoi.txt  run_chgres_nemsio_cray.sh  ufs.mods.tar
modulefiles/gsi/: CMakeLists.txt  modulefile.ProdGSI.jet  setCompilerFlags.cmake
sorc/: .gitignore  CMakeLists.txt  aero_extract.sh  aws.env  build_all.sh  build_all.umb.sh  build_all_reg2grb2.sh  build_all_stub.sh  build_chgres.sh  build_chgres_nc_gaussian.sh  build_cycle.sh  build_emcsfc.sh  build_enkf_chgres_recenter.sh  build_enkf_chgres_recenter.umb.sh  build_enkf_chgres_recenter_nc.sh  build_fre-nctools.sh  build_fv3.sh  build_fv3.umb.sh  build_fv3_coupled.sh  build_fv3nc2nemsio.sh  build_fv3nc2nemsio.umb.sh  build_gaussian_sfcanl.sh  build_gdas.sh  build_gdas.umb.sh  build_gdas2gldas.sh  build_gdas_gridbull.sh  build_gdas_navybull.sh  build_gdas_trpsfcmv.sh  build_gfs_bufrsnd.sh  build_gfs_bufrsnd.umb.sh  build_gfs_bufrsnd_netcdf.sh  build_gfs_cnvgrib21_gfs.sh  build_gfs_cnvgrib21_gfs.sh_theia  build_gfs_fbwndgfs.sh  build_gfs_fbwndgfs.sh_theia  build_gfs_fbwndgfs.umb.sh  build_gfs_overpdtg2.sh  build_gfs_overpdtg2.sh_theia  build_gfs_overpdtg2.umb.sh  build_gfs_util.sh  (+63 more)
sorc/add_fv3gfs_temp/: configure.fv3.jet  fv3
sorc/add_post_temp/: build_ncep_post.sh  v7.0.0-gaea
sorc/awc_wafavn.fd/: funcphys.f90  sfmakedepend.pl  waf_config.f90  waf_glob.f90  waf_grib1.f90  waf_phys.f90
sorc/chgres_cube.fd/: .gitignore
sorc/cmake/: FindNetCDF.cmake  Findwgrib2.cmake
sorc/cnvgrib21_gfs.fd/: cnvgfs22.f  makefile.cray  makefile.gaea
sorc/emcsfc_ice_blend.fd/: .gitignore  README.build  make.sh
sorc/emcsfc_snow2mdl.fd/: .gitignore  make.sh  makefile  program_setup.f  snow2mdl.f  snowdat.f
sorc/enkf_chgres_recenter.fd/: CMakeLists.txt  driver.f90  grid2grid.f90  input_data.f90  interp.f90  makefile  output_data.f90  printrusage.c  setup.f90  utils.f90
sorc/enkf_chgres_recenter_nc.fd/: CMakeLists.txt  driver.f90  input_data.f90  interp.f90  makefile  output_data.f90  setup.f90  utils.f90
sorc/fbwndgfs.fd/: CMakeLists.txt  fbwndgfs.f  fbwndgfs.f_ipv2.0.0  makefile.GENERIC  makefile.wcoss_cray
sorc/fre-nctools/: BUILD_TOOLS.csh
sorc/fv3nc2nemsio.fd/: 0readme  CMakeLists.txt  constants.f90  fv3_main.f90  fv3_module.f90  makefile.sh
sorc/gaussian_sfcanl.fd/: .gitignore  CMakeLists.txt  Makefile  gaussian_sfcanl.f90  makefile.sh
sorc/gdas2gldas.fd/: driver.F90  gldas_data.F90  input_data.F90  interp.F90  makefile  model_grid.F90  write_data.F90
sorc/gdas_trpsfcmv.fd/: makefile  makefile.cray  makefile.theia  makefile.wcoss  makefile.wcoss_cray  makefile.wcoss_dell_p3  trpsfcmv.f.orig
sorc/gettrk.fd/: gettrk_modules.f
sorc/gfs_bufr.fd/: CMakeLists.txt  Makefile  bfrhdr.f  bfrize.f  buff.f  calpreciptype.f  calwxt_gfs_ramer.f  gfsbufr.f  machine.f  make.mkl  makefile.sh  makefile_module  makefile_netcdf  makefile_wcoss_module  meteorg.f  mstadb.f  newsig1.f  physcons.f  read_nemsio.f  read_netcdf.f  read_netcdf_p.f  rsearch.f  vintg.f
sorc/gfs_flux.fd/: kentest.f  makefile.sh  qpfint.f
sorc/gfs_post.fd/: run_JGLOBAL_NCEPPOST  submit_run_JGLOBAL_NCEPPOST.sh
sorc/gldas2gdas.fd/: driver.F90  input_data.F90  interp.F90  makefile  model_grid.F90  setup.f90  write_data.F90
sorc/global_chgres.fd/: .gitignore  Makefile  chgres.f90  funcphys.f  machine_8.f90  netcdf_io.F90  nrlmsise00_sub.f90  nsst_chgres.f  nsst_chgres.f90  physcons.f  read_write.f90  sfcsub.F  sfcsub.f  surface_chgres.f  surface_chgres.f90  vintg_idea.f
sorc/global_chgres.gfdl.fd/: netcdf_io.F90_save  sfcsub.f
sorc/global_cycle.fd/: Makefile  cycle.f90  read_write_data.f90  sfcsub.F
sorc/gridbull.fd/: QUADAX.f  WINDY.f  makefile.gaea  makefile.wcoss_dell_p3
sorc/mkgfsnemsioctl.fd/: makefile  mkgfsnemsioctl.f
sorc/mod4aws/: gdas.aws.tar  gfs_utils.aws.tar  gsi_enkf.aws.tar  gsi_monitor.aws.tar  ufs_model.aws.tar  upp.aws.tar
sorc/mods4aws/: gdas.aws.tar  gfs_utils.aws.tar  gsi_enkf.aws.tar  gsi_enkf.azure.tar  gsi_utils.aws.tar  ufs_model.aws.tar  update-modulefiles.sh
sorc/modulefiles/: global_chgres.cray  orog.cray  orog.wcoss
sorc/navybull.fd/: makefile.wcoss  makefile.wcoss_cray  makefile.wcoss_dell_p3
sorc/nemsio_chgdate.fd/: makefile  nemsio_chgdate.f90
sorc/nemsio_cvt.fd/: makefile  nemsio_cvt.f
sorc/nemsio_get.fd/: makefile  nemsio_get.f
sorc/nemsio_read.fd/: makefile  nemsio_read.f
sorc/nst_mask_namchg.fd/: Makefile
sorc/nst_tf_chg.fd/: Makefile  makefile.sh  nc_check.f90  nst_tf_chg.f90  read_tfs_nc.f90  read_tfs_nc_2d.f90  setup.f90  smth9_msk.f90
sorc/orog.fd/: .gitignore  Makefile  README  README_OC  machine.h  mtnlm7_oclsm.f  netcdf_io.F90  resevod.h
sorc/overpdtg2.fd/: makefile.wcoss_cray  makefile.wcoss_dell_p3  makefile_org  overpdtg2.f  sample.script
sorc/oznmon_horiz.fd/: create_ctl_horiz.f90  horiz.f90
sorc/oznmon_time.fd/: read_diag.f90  time.f90  update_ctl_time.f90
sorc/post_add_temp/: build_ncep_post.sh  module-setup.sh.inc
sorc/reg2grb2.fd/: CMakeLists.txt  Makefile  reg2grb2.f  regdiag.f
sorc/regrid_nemsio.fd/: CMakeLists.txt  Makefile  Makefile.dependency  gfs_nems_interface.f90  makefile.sh  namelist_def.f90  regrid_nemsio_interface.f90  variable_interface.f90
sorc/relocate_mv_nvortex.fd/: H12.f  J4SAVE.f  SEPAR.f  WNNLS.f  XERCTL.f  XERPRT.f  XERROR.f  XERRWV.f  XGETUA.f  landcmsk.f  makefile_gaea  makefile_wcoss_dell_p3  mv_nvortex.f  w3tagb.f
sorc/supvit.fd/: CMakeLists.txt  makefile  supvit_main.f  supvit_modules.f
sorc/syndat_getjtbul.fd/: CMakeLists.txt  getjtbul.f  makefile
sorc/syndat_maksynrc.fd/: CMakeLists.txt  makefile
sorc/syndat_qctropcy.fd/: CMakeLists.txt  makefile  qctropcy.f
sorc/tave.fd/: makefile  (+1 more)
(+11086 files in other folders)
