[metadata]
name = pygw
version = 0.0.1
description = Global applications specific workflow related tools
long_description = file: README.md
long_description_content_type = text/markdown
author = "NOAA/NWS/NCEP/EMC"
#author_email = first.last@domain.tld
keywords = NOAA, NWS, NCEP, EMC, GFS, GEFS
home_page = https://github.com/noaa-emc/global-workflow
license = GNU Lesser General Public License
classifiers =
  Development Status :: 1 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU Lesser General Public License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Libraries :: Python Modules
  Operating System :: OS Independent
  Typing :: Typed
project_urls =
  Bug Tracker = https://github.com/noaa-emc/global-workflow/issues
  CI = https://github.com/noaa-emc/global-workflow/actions

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  setuptools
install_requires =
  numpy==1.21.6
  PyYAML==6.0
  Jinja2==3.1.2
tests_require =
  pytest

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
dev = pytest-cov>=3

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
